--- a/index.html
+++ b/index.html
@@ -1,39 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Intro section with dropdown navigation</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <title>Frontend Mentor | Intro section with dropdown navigation</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
+<header>
+    <nav>
+        <div class="logo">
+            <img src="images/logo.svg" alt="Logo">
+        </div>
+        <ul>
+            <li>Features</li>
+            <li>Company</li>
+            <li>Careers</li>
+            <li>bout</li>
+        </ul>
+        <div class="login">
+            <p>Login</p>
+            <button>Register</button>
+        </div>
+    </nav>
+</header>
+<main>
+    <section>
+        <h1>Make remote work</h1>
+        <p>Get your team in sync, no matter your location. Streamline processes,
+        </p>
+        <button>Learn more </button>
+        <img src="images/client-databiz.svg" />
+        <img src="images/client-audiophile.svg" />
+        <img src="images/client-meet.svg" />
+        <img src="images/client-maker.svg" />
+        <div class="img-wrapper">
+            <img src="images/image-hero-desktop.png" />
+        </div>
+    </section>
+</main>
 
-  Features
-  Company
-  Careers
-  About
+<h1>Make remote work</h1>
+<p>Get your team in sync, no matter your location. Streamline processes,
+</p>
+<button>Learn more </button>
 
-  Login
-  Register
-
-  Make remote work
-
-  Get your team in sync, no matter your location. Streamline processes, 
-  create team rituals, and watch productivity soar.
-
-  Learn more
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+<div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+</div>
 </body>
 </html>
